--- a/学习之路/黑马公开课.md
+++ b/学习之路/黑马公开课.md
@@ -111,3 +111,8 @@ http://open.itcast.cn/java/14-349.html?1606wwtqun
 http://dvd.boxuegu.com/course/135.html?1602wwtqun
 源码链接：http://pan.baidu.com/s/1brXL4E 密码：dqni
 
+80、Nodejs快速入门-大前端必备技能
+http://open.itcast.cn/icd/7-498.html?1702trkqun
+https://pan.baidu.com/s/1dFvFCPF
+链接: https://pan.baidu.com/s/1skMfoWd 密码: axvn
+
