updates android note book

--- a/JavaWeb/第12章 上传下载/上传下载文件.md
+++ b/JavaWeb/第12章 上传下载/上传下载文件.md
@@ -164,6 +164,7 @@ List<FileItem> list = fileUpload.parseRequest(request);
 
 ### **2.2.2 FileItem 表示文件上传表单中 每个数据部分**
 隆重介绍FileItem类，它才是我们最终要的结果。一个FileItem对象对应一个表单项（表单字段）。一个表单中存在文件字段和普通字段，可以使用FileItem类的isFormField()方法来判断表单字段是否为普通字段，如果不是普通字段，那么就是文件字段了
+
 | 返回值         | 方法声明             | 功能描述                                     |
 | ----------- | ---------------- | ---------------------------------------- |
 | String      | getName()        | 获取文件字段的文件名称                              |
@@ -179,6 +180,7 @@ List<FileItem> list = fileUpload.parseRequest(request);
 注意事项：因为文件上传表单采用编码方式multipart/form-data 与传统url编码不同，所有getParameter ()方法不能使用 ，setCharacterEncoding()无法解决输入项乱码问题
 
 ### **2.2.3 ServletFileUpload 文件上传核心类**
+
 | 返回值     | 方法声明                  | 功能描述                                     |
 | ------- | --------------------- | ---------------------------------------- |
 | boolean | isMultipartContent()  | 判断request的编码方式是否为multipart/form-data     |
@@ -261,6 +263,7 @@ public void doPost(HttpServletRequest request, HttpServletResponse response)
 # 3. 文件上传之细节
 
 ## **3.1 把上传的文件放到WEB-INF目录下**
+
 如果没有把用户上传的文件存放到WEB-INF目录下，那么用户就可以通过浏览器直接访问上传的文件，这是非常危险的。
 
 假如说用户上传了一个a.jsp文件，然后用户在通过浏览器去访问这个a.jsp文件，那么就会执行a.jsp中的内容，如果在a.jsp中有如下语句：Runtime.getRuntime().exec(“shutdown –s –t 1”);，那么你就会…
@@ -352,6 +355,7 @@ public void doPost(HttpServletRequest request, HttpServletResponse response)
 ```
 
 ## **3.5 一个目录不能存放过多的文件（存放目录打散）**
+
 一个目录下不应该存放过多的文件，一般一个目录存放1000个文件就是上限了，如果在多，那么打开目录时就会很“卡”。你可以尝试打印C:\WINDOWS\system32目录，你会感觉到的
 
 也就是说，我们需要把上传的文件放到不同的目录中。但是也不能为每个上传的文件一个目录，这种方式会导致目录过多。所以我们应该采用某种算法来“打散”！
@@ -364,13 +368,14 @@ public void doPost(HttpServletRequest request, HttpServletResponse response)
 我们这里使用hash算法来打散：
 
 -	获取文件名称的hashCode：int hCode = name.hashCode()
-   -获取hCode的低4位，然后转换成16进制字符
-   -获取hCode的5~8位，然后转换成16进制字符
-   -使用这两个16进制的字符生成目录链。例如低4位字符为“5”
+- 获取hCode的低4位，然后转换成16进制字符
+- 获取hCode的5~8位，然后转换成16进制字符
+- 使用这两个16进制的字符生成目录链。例如低4位字符为“5”
 
 这种算法的好处是，在uploads目录下最多生成16个目录，而每个目录下最多再生成16个目录，即256个目录，所有上传的文件都放到这256个目录下。如果每个目录上限为1000个文件，那么一共可以保存256000个文件
 
 例如上传文件名称为：新建 文本文档.txt，那么把“新建 文本文档.txt”的哈希码获取到，再获取哈希码的低4位，和5~8位。假如低4位为：9，5~8位为1，那么文件的保存路径为uploads/9/1/
+
 ```java
 int hCode = name.hashCode();//获取文件名的hashCode
 //获取hCode的低4位，并转换成16进制字符串
@@ -446,9 +451,10 @@ public void doPost(HttpServletRequest request, HttpServletResponse response)
 ```
 
 ## **3.7 上传文件的总大小限制**
+
 上传文件的表单中可能允许上传多个文件，例如：
 
-![这里写图片描述](http://img.blog.csdn.net/20161031175317991)
+![上传下载文件](http://img.blog.csdn.net/20161031175317991)
 
 有时我们需要限制一个请求的大小。也就是说这个请求的最大字节数（所有表单项之和）！实现这一功能也很简单，只需要调用ServletFileUpload类的setSizeMax(long)方法即可。
 
