--- a/JavaWeb/第17章 JavaWeb开发/在线支付.md
+++ b/JavaWeb/第17章 JavaWeb开发/在线支付.md
@@ -1,4 +1,5 @@
 # **1. 在线支付概述**
+
 什么是在线支付呢？没错，就是在网上花钱！大家一定有过这样的经历。但是你可能不太了解在线支付的“内情”，下面我们来了解一下！
 
 如果你现在开始经营一个电子商务网站，用户买了东西一定要支付，你的网站一定要可以连接各大银行了，然后在各大银行支付完成后，再返回到你的网站上显示“支付成功”！
@@ -6,6 +7,7 @@
 这就是今天我们要做的事情，连接银行的网银系统完成支付。说专业一点，我们称之为“开发在线支付的网关”
 
 # **2. 两种在线支付的方式**
+
 在线支付一共有两种方式：
 
 - 电商直接与银行对接
@@ -15,7 +17,7 @@
 
 当小网站资金量不足时，不能与银行对接，那么它们会选择与第三方支付公司合作。大家也都明白这是些什么公司，例如：支付宝、易宝、财富通、快钱等公司是国内比较有名的。它们这些公司可以与银行对接（因为资金够多），然后小电商与它们对接！但是第三方是要求收费的！第三方一般会收取电商1%的费用，不过不会收客户的钱。
 
- ![在线支付](http://img.blog.csdn.net/20161106140415922)
+![在线支付](http://img.blog.csdn.net/20161106140415922)
 
 通过上图大家可以了解到，在银行的页面上会显示出商城名称、RMB订单号、订单时间。。。，这些东西银行是怎么知道的，当然是电商传递给银行的。当电商与银行对接后，电商要给银行的页面传递银行页面需要的参数，所以银行的页面才能显示这些数据！
 
@@ -31,6 +33,7 @@
 上图中已经说明，客户在电商的网站上点击确认支付后，会定向到第三方的网站，然后再由第三方与银行对接。这说明电商要传递给第三方参数！再由第三方把参数传递给银行。这种方式的好处是：只需要针对第三方开发即可，而不用再为每家银行提供参数。为每家银行提供参数的工作是第三方的任务了。但是，第三方不老可靠的，如果第三方倒闭了，人跑了，那你的钱就没了。因为客户支付的钱没有到你的银行帐户中，而是支付到了第三方的银行帐户中，而你是在第三方有一个帐户。而且第三方还要收手续费，一般是1%，这可不是小数字啊（真黑）。
 
 # **3. 通过第三方在线支付规则**
+
 电商想在第三方注册商户，需要向第三方提供ICP认证。ICP经营许可证是根据国家《互联网管理办法规定》，经营性网站必须办理的网站经营许可证，没有就属于非法经营。
 
 我们不可能因为练习就去办理ICP！所以我们无法在第三方注册商户。不过我们已经有现成的在易宝注册的商户，所以这一步就可以忽略了。
@@ -46,7 +49,7 @@
 
 在易宝接入规范中，还可以查找到易宝要求的参数，在电商与易宝对接时需要给支付网关传递这些参数：
 
-正式请求地址：https://www.yeepay.com/app-merchant-proxy/node 
+正式请求地址：https://www.yeepay.com/app-merchant-proxy/node
 
 ![易宝支付](http://img.blog.csdn.net/20161106145815851)
 
@@ -71,7 +74,7 @@
 
 第一步：index.jsp
 
-```
+```html
 <form action="" method="post">
 	订单号：<input type="text" name="p2_Order"/><br/>
 	金　额：<input type="text" name="p3_Amt"/><br/>
@@ -126,22 +129,22 @@ public class BuyServlet extends HttpServlet {
 		String hmac = PaymentUtil.buildHmac(p0_Cmd, p1_MerId, p2_Order, p3_Amt,
 				p4_Cur, p5_Pid, p6_Pcat, p7_Pdesc, p8_Url, p9_SAF, pa_MP,
 				pd_FrpId, pr_NeedResponse, keyValue);
-		
+
 		// 把所有参数连接到网关地址后面
 		String url = "https://www.yeepay.com/app-merchant-proxy/node";
-		url += "?p0_Cmd=" + p0_Cmd + 
+		url += "?p0_Cmd=" + p0_Cmd +
 				"&p1_MerId=" + p1_MerId +
-				"&p2_Order=" + p2_Order + 
-				"&p3_Amt=" + p3_Amt + 
-				"&p4_Cur=" + p4_Cur + 
-				"&p5_Pid=" + p5_Pid + 
-				"&p6_Pcat=" + p6_Pcat + 
-				"&p7_Pdesc=" + p7_Pdesc + 
-				"&p8_Url=" + p8_Url + 
-				"&p9_SAF=" + p9_SAF + 
-				"&pa_MP=" + pa_MP + 
-				"&pd_FrpId=" + pd_FrpId + 
-				"&pr_NeedResponse=" + pr_NeedResponse + 
+				"&p2_Order=" + p2_Order +
+				"&p3_Amt=" + p3_Amt +
+				"&p4_Cur=" + p4_Cur +
+				"&p5_Pid=" + p5_Pid +
+				"&p6_Pcat=" + p6_Pcat +
+				"&p7_Pdesc=" + p7_Pdesc +
+				"&p8_Url=" + p8_Url +
+				"&p9_SAF=" + p9_SAF +
+				"&pa_MP=" + pa_MP +
+				"&pd_FrpId=" + pd_FrpId +
+				"&pr_NeedResponse=" + pr_NeedResponse +
 				"&hmac=" + hmac;
 		System.out.println(url);
 		// 重定向到网关
@@ -169,7 +172,7 @@ public class BackServlet extends HttpServlet {
 		String r3_Amt = request.getParameter("r3_Amt");
 		String r6_Order = request.getParameter("r6_Order");
 		String r9_BType = request.getParameter("r9_BType");
-		
+
 		if(r1_Code.equals("1")) {
 			if(r9_BType.equals("1")) {
 				response.getWriter().print("<h1>支付成功！</h1>");//其实支付不成功时根本易宝根本就不会返回到本Servlet
@@ -187,10 +190,10 @@ public class BackServlet extends HttpServlet {
 public class PaymentUtil {
 
 	private static String encodingCharset = "UTF-8";
-	
+
 	/**
 	 * 生成hmac方法
-	 * 
+	 *
 	 * @param p0_Cmd 业务类型
 	 * @param p1_MerId 商户编号
 	 * @param p2_Order 商户订单号
@@ -238,13 +241,13 @@ public class PaymentUtil {
 		sValue.append(pd_FrpId);
 		// 应答机制
 		sValue.append(pr_NeedResponse);
-		
+
 		return PaymentUtil.hmacSign(sValue.toString(), keyValue);
 	}
-	
+
 	/**
 	 * 返回校验hmac方法
-	 * 
+	 *
 	 * @param hmac 支付网关发来的加密验证码
 	 * @param p1_MerId 商户编号
 	 * @param r0_Cmd 业务类型
@@ -290,7 +293,7 @@ public class PaymentUtil {
 		String sNewString = PaymentUtil.hmacSign(sValue.toString(), keyValue);
 		return sNewString.equals(hmac);
 	}
-	
+
 	/**
 	 * @param aValue
 	 * @param aKey
@@ -348,7 +351,7 @@ public class PaymentUtil {
 	}
 
 	/**
-	 * 
+	 *
 	 * @param args
 	 * @param key
 	 * @return
@@ -386,7 +389,7 @@ public class PaymentUtil {
 		return toHex(md.digest(value));
 
 	}
-	
+
 //	public static void main(String[] args) {
 //		System.out.println(hmacSign("AnnulCard1000043252120080620160450.0http://localhost/SZXpro/callback.asp杩?4564868265473632445648682654736324511","8UPp0KE8sq73zVP370vko7C39403rtK1YwX40Td6irH216036H27Eb12792t"));
 //	}
