--- a/设计模式/适配器设计模式.md
+++ b/设计模式/适配器设计模式.md
@@ -1,14 +1,14 @@
-##一、概述
+# 1. 概述
 适配器模式将某个类的接口转换成客户端期望的另一个接口表示，目的是消除由于接口不匹配所造成的类的兼容性问题。主要分为三类：类的适配器模式、对象的适配器模式、接口的适配器模式。在Android中充分利用了适配器来实现view和数据的联系
 
-##二、角色介绍
+# 2. 角色介绍
 - Target接口（目标角色）：5v电压
 - Adaptee（源角色）：220v电压
 - Adapter（适配器）：把220v电压转变成5v
-##三、经典案例
+# 3. 经典案例
 ListView，GridView，RecyclerView
-##四、案例分析
-###1、类的适配器模式
+# 4. 案例分析
+## 4.1 类的适配器模式
 
 ```java
 public class Source {
@@ -41,7 +41,7 @@ public class Source {
         }
     }
 ```
-###2、对象的适配器模式
+## 4.2 对象的适配器模式
 基本思路和类的适配器模式相同，只是将Adapter 类作修改，这次不继承Source 类，而是持有Source 类的实例，以达到解决兼容性的问题
 
 ```java
@@ -74,11 +74,13 @@ public class Wrapper implements Targetable {
         }
     }
 ```
-###3、接口的适配器模式
+## 4.3 接口的适配器模式
 
 接口的适配器是这样的：有时我们写的一个接口中有多个抽象方法，当我们写该接口的实现类时，必须实现该接口的所有方法，这明显有时比较浪费，因为并不是所有的方法都是我们需要的，有时只需要某一些，此处为了解决这个问题，我们引入了接口的适配器模式，借助于一个抽象类，该抽象类实现了该接口，实现了所有的方法，而我们不和原始的接口打交道，只和该抽象类取得联系，所以我们写一个类，继承该抽象类，重写我们需要的方法就行。
 
-###4、在开发过程中,ListView的Adapter是我们最为常见的类型之一。一般的用法大致如下
+## 4.4 ListView的适配器模式
+
+在开发过程中，ListView的Adapter是我们最为常见的类型之一，一般的用法大致如下
 
 ```java
 // 代码省略
@@ -313,11 +315,11 @@ ListView覆写了AbsListView中的layoutChilden函数，在该函数中根据布
 
 通过增加Adapter一层来将Item View的操作抽象起来，ListView等集合视图通过Adapter对象获得Item的个数、数据元素、Item View等，从而达到适配各种数据、各种Item视图的效果。因为Item View和数据类型千变万化，Android的架构师们将这些变化的部分交给用户来处理，通过getCount、getItem、getView等几个方法抽象出来，也就是将Item View的构造过程交给用户来处理，灵活地运用了适配器模式，达到了无限适配、拥抱变化的目的。
 
-##AdapterView简介
+# 5. AdapterView简介
 
 AdapterView本身是一个抽象类，AdapterView及其子类的继承关系如下图： 
 
-![](http://img.blog.csdn.net/20160521215638562)
+![](../assets/adapter.png)
 
-##Adapter介绍
-![](http://img.blog.csdn.net/20160521215803408)
+# 6. Adapter介绍
+![](../assets/adapter1.png)
