add content about xmpp

--- a/学习之路/黑马公开课.md
+++ b/学习之路/黑马公开课.md
@@ -116,3 +116,10 @@ http://open.itcast.cn/icd/7-498.html?1702trkqun
 https://pan.baidu.com/s/1dFvFCPF
 链接: https://pan.baidu.com/s/1skMfoWd 密码: axvn
 
+## 网易新闻频道管理的炫酷实现-video
+
+https://pan.baidu.com/s/1gf62WaZ#list/path=%2F
+
+网易新闻频道管理的炫酷实现-video
+https://pan.baidu.com/s/1gf62WaZ
+链接: https://pan.baidu.com/s/1qYEshg4 密码: n9uz
