--- a/学习之路/黑马公开课.md
+++ b/学习之路/黑马公开课.md
@@ -116,7 +116,7 @@ http://open.itcast.cn/icd/7-498.html?1702trkqun
 https://pan.baidu.com/s/1dFvFCPF
 链接: https://pan.baidu.com/s/1skMfoWd 密码: axvn
 
-## 网易新闻频道管理的炫酷实现-video
+网易新闻频道管理的炫酷实现-video
 
 https://pan.baidu.com/s/1gf62WaZ#list/path=%2F
 
@@ -131,4 +131,45 @@ http://yun.itheima.com/course/214.html?1703lckj
 8天深入理解python教程
 http://yun.itheima.com/course/145.html?1703lcqqun
 链接：https://pan.baidu.com/s/1mh8H0rI 密码：38z8
+
+腾讯微博列表展示的功能实现-视频
+
+https://pan.baidu.com/s/1b9g2Do?errno=0&errmsg=Auth%20Login%20Sucess&&bduss=&ssnerror=0#list/path=%2F
+
+链接: http://pan.baidu.com/s/1jHLHvca 密码: 3jjs
+
+JNI视频
+
+https://pan.baidu.com/s/1mi8xOes#list/path=%2F
+
+bootstrap商业网站实战1
+http://open.itcast.cn/python/53-553.html
+链接：http://pan.baidu.com/s/1c1DdG6s 密码：1s5r
+
+bootstrap商业网站实战2
+http://open.itcast.cn/python/53-554.html
+链接：http://pan.baidu.com/s/1bSaLYY 密码：yn3f
+
+ H5+CSS3视频：https://pan.baidu.com/s/1eSJtHiM#list/path=%2F
+
+资料链接：http://pan.baidu.com/s/1eSfXA6m 密码：i9l9
+
+ Javascript基础加强视频（新）https://pan.baidu.com/s/1skDXr6t#list/path=%2F
+
+链接：http://pan.baidu.com/s/1i4UW0BF 密码：hu6i
+
+## 黑马Android最新课程
+
+自定义控件v3.0:链接: https://pan.baidu.com/s/1jIfrtMe 密码: 4irm
+智慧北京v4.0:链接: https://pan.baidu.com/s/1mh7xpLu 密码: aw6h
+移动直播：链接: https://pan.baidu.com/s/1gfLuPoR 密码: iyry
+开源框架合集v1.1:链接: https://pan.baidu.com/s/1slrUkNV 密码: rnzb
+即时通讯v2.0（环信版）:链接: https://pan.baidu.com/s/1sl6NsuD 密码: kkdh
+黑马外卖v2.0:链接: https://pan.baidu.com/s/1dF22dd3 密码: hbjm
+Google电子市场v4.0:链接: https://pan.baidu.com/s/1qXT9Nuk 密码: wqt3
+VR虚拟现实v1.0:链接: https://pan.baidu.com/s/1i5QG6lJ 密码: uwmx
+传智播放器：链接:https://pan.baidu.com/s/1bpN4UFt 密码:irf4
+Android新特性v4.0：链接: https://pan.baidu.com/s/1i5BNx1F 密码: 734t
+AndroidStudio:链接: https://pan.baidu.com/s/1gfn4Sqn 密码: kh1k
+性能优化专题-消除卡顿: 链接:https://pan.baidu.com/s/1kVBLoqF 密码:ug8i
 
